# biodiv

./: LICENSE  Makefile  README.md  pyproject.toml
biodiv/: __init__.py  __main__.py  config.py  dataset.py  features.py  plots.py
biodiv/modeling/: predict.py  train.py
reports/maps/maps/: maps.qgz
reports/maps/maps/layers/: layer_extent.fgb  margalef_masked.tif  stations.fgb
tests/: test_dataset.py  test_features.py  test_plots.py
tests/data/: raster.tif  raster.tif.aux.xml
tests/modeling/: test_train.py
